--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu:22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: IP2B2/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: IP2B2/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '16' # this is for compatbility with next.js
 
@@ -34,7 +34,7 @@ jobs:
         run: docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
       - name: Deploy to Server via SSH
-        uses: IP2B2/ssh-action@v0.1.5  
+        uses: appleboy/ssh-action@v1.0.0  
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
