[DevOps-105] Made the PR deploy to be ran manually by the testers + added labels: 'ready-to-run' -> PR that can be deployed' 'has-conflicts' -> git conflicts; 'merged' -> PR merged; 'needs-work' -> PR that still needs modifications

--- a/.github/workflows/frontend-PR-deploy.yml
+++ b/.github/workflows/frontend-PR-deploy.yml
@@ -3,6 +3,12 @@ name: Deploy PR Frontend
 on:
   pull_request:
     types: [labeled]
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch name to deploy'
+        required: true
+        type: string
 
 concurrency:
   group: pr-queue
@@ -10,14 +16,14 @@ concurrency:
 
 jobs:
   deploy:
-    if: github.event.label.name == 'ready-to-run'  
+    if: github.event_name == 'workflow_dispatch' || github.event.label.name == 'ready-to-run'
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.branch || github.event.pull_request.head.ref }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
