--- a/.github/workflows/pr-review-feedback.yml
+++ b/.github/workflows/pr-review-feedback.yml
@@ -1,75 +1,91 @@
-name: PR Needs Work Labeler
+name: PR Review/Conflict Labeler
 
 on:
+  pull_request:
+    types: [reopened, opened, synchronize]
   pull_request_review:
     types: [submitted]
 
 permissions:
   pull-requests: write
   issues: write
+  actions: write
 
 jobs:
-  mark-needs-work:
-    if: github.event.review.state == 'CHANGES_REQUESTED'
+  label-pr-status:
+    if: github.event.review.state == 'CHANGES_REQUESTED' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v7
         with:
           script: |
-            const { pull_request } = context.payload;
-            const prNumber = pull_request.number;
+            const pr = context.payload.pull_request;
             const repo = context.repo;
 
-            // Label current PR as needs-work
-            await github.rest.issues.addLabels({
+            const { data: existingLabels } = await github.rest.issues.listLabelsOnIssue({
               owner: repo.owner,
               repo: repo.repo,
-              issue_number: prNumber,
-              labels: ['needs-work']
+              issue_number: pr.number
             });
+            const currentLabels = existingLabels.map(l => l.name);
 
-            // Remove 'ready-to-run' and 'queued' if present
-            for (const label of ['ready-to-run', 'queued']) {
-              await github.rest.issues.removeLabel({
-                owner: repo.owner,
-                repo: repo.repo,
-                issue_number: prNumber,
-                name: label
-              }).catch(() => {});
+            // Handle CHANGES_REQUESTED
+            if (context.eventName === 'pull_request_review' && context.payload.review.state === 'CHANGES_REQUESTED') {
+              if (!currentLabels.includes('needs-work')) {
+                await github.rest.issues.addLabels({
+                  owner: repo.owner,
+                  repo: repo.repo,
+                  issue_number: pr.number,
+                  labels: ['needs-work']
+                });
+              }
+              // Remove ready-to-run if present
+              if (currentLabels.includes('ready-to-run')) {
+                await github.rest.issues.removeLabel({
+                  owner: repo.owner,
+                  repo: repo.repo,
+                  issue_number: pr.number,
+                  name: 'ready-to-run'
+                }).catch(() => {});
+              }
+              return;
             }
 
-            // Get all open PRs in order
-            const { data: openPRs } = await github.rest.pulls.list({
+            // Check if PR has conflicts
+            const { data: mergeablePR } = await github.rest.pulls.get({
               owner: repo.owner,
               repo: repo.repo,
-              state: 'open',
-              base: pull_request.base.ref,
-              sort: 'created',
-              direction: 'asc'
+              pull_number: pr.number
             });
 
-            // Find next PR without 'needs-work' or 'ready-to-run'
-            const nextPR = openPRs.find(pr => {
-              const labels = pr.labels.map(l => l.name);
-              return pr.number !== prNumber &&
-                     !labels.includes('needs-work') &&
-                     !labels.includes('ready-to-run');
-            });
+            if (mergeablePR.mergeable === false) {
+              if (!currentLabels.includes('has-conflicts')) {
+                await github.rest.issues.addLabels({
+                  owner: repo.owner,
+                  repo: repo.repo,
+                  issue_number: pr.number,
+                  labels: ['has-conflicts']
+                });
+              }
+              if (currentLabels.includes('ready-to-run')) {
+                await github.rest.issues.removeLabel({
+                  owner: repo.owner,
+                  repo: repo.repo,
+                  issue_number: pr.number,
+                  name: 'ready-to-run'
+                }).catch(() => {});
+              }
+              return;
+            }
 
-            // Promote next PR directly to 'ready-to-run' and remove 'queued' if needed
-            if (nextPR) {
-              // Remove 'queued' just in case it's still there
-              await github.rest.issues.removeLabel({
-                owner: repo.owner,
-                repo: repo.repo,
-                issue_number: nextPR.number,
-                name: 'queued'
-              }).catch(() => {});
-
-              await github.rest.issues.addLabels({
-                owner: repo.owner,
-                repo: repo.repo,
-                issue_number: nextPR.number,
-                labels: ['ready-to-run']
-              });
+            // If everything is clean and "needs-work"/"has-conflicts" exist, remove them
+            for (const label of ['needs-work', 'has-conflicts']) {
+              if (currentLabels.includes(label)) {
+                await github.rest.issues.removeLabel({
+                  owner: repo.owner,
+                  repo: repo.repo,
+                  issue_number: pr.number,
+                  name: label
+                }).catch(() => {});
+              }
             }
