--- a/.github/workflows/pr-merged-cleanup.yml
+++ b/.github/workflows/pr-merged-cleanup.yml
@@ -1,4 +1,4 @@
-name: PR Merge Labeler
+name: Label Merged PRs
 
 on:
   pull_request:
@@ -7,6 +7,7 @@ on:
 permissions:
   pull-requests: write
   issues: write
+  actions: write
 
 jobs:
   label-merged:
@@ -16,46 +17,31 @@ jobs:
       - uses: actions/github-script@v7
         with:
           script: |
-            const { pull_request } = context.payload;
-            const prNumber = pull_request.number;
+            const pr = context.payload.pull_request;
             const repo = context.repo;
 
-            await github.rest.issues.addLabels({
+            const { data: existingLabels } = await github.rest.issues.listLabelsOnIssue({
               owner: repo.owner,
               repo: repo.repo,
-              issue_number: prNumber,
-              labels: ['merged']
+              issue_number: pr.number
             });
 
-            for (const label of ['ready-to-run', 'queued']) {
+            const currentLabels = existingLabels.map(label => label.name);
+
+            // Remove 'ready-to-run' if it's present
+            if (currentLabels.includes('ready-to-run')) {
               await github.rest.issues.removeLabel({
                 owner: repo.owner,
                 repo: repo.repo,
-                issue_number: prNumber,
-                name: label
+                issue_number: pr.number,
+                name: 'ready-to-run'
               }).catch(() => {});
             }
 
-            const { data: openPRs } = await github.rest.pulls.list({
+            // Add 'merged' label
+            await github.rest.issues.addLabels({
               owner: repo.owner,
               repo: repo.repo,
-              state: 'open',
-              base: pull_request.base.ref,
-              sort: 'created',
-              direction: 'asc'
+              issue_number: pr.number,
+              labels: ['merged']
             });
-
-            const nextPR = openPRs.find(pr => {
-              const labels = pr.labels.map(l => l.name);
-              return !labels.includes('needs-work') && !labels.includes('ready-to-run');
-            });
-
-            if (nextPR) {
-              await github.rest.issues.addLabels({
-                owner: repo.owner,
-                repo: repo.repo,
-                issue_number: nextPR.number,
-                labels: ['ready-to-run']
-              });
-            }
-
