--- a/.github/workflows/pr-review-feedback.yml
+++ b/.github/workflows/pr-review-feedback.yml
@@ -1,19 +1,16 @@
-name: PR Review/Conflict Labeler
+name: Label Needs Work
 
 on:
-  pull_request:
-    types: [reopened, opened, synchronize]
   pull_request_review:
     types: [submitted]
 
 permissions:
   pull-requests: write
   issues: write
-  actions: write
 
 jobs:
-  label-pr-status:
-    if: github.event.review.state == 'CHANGES_REQUESTED' || github.event_name == 'pull_request'
+  label-review:
+    if: github.event.review.state == 'CHANGES_REQUESTED'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v7
@@ -22,70 +19,35 @@ jobs:
             const pr = context.payload.pull_request;
             const repo = context.repo;
 
-            const { data: existingLabels } = await github.rest.issues.listLabelsOnIssue({
+            const { data: currentLabels } = await github.rest.issues.listLabelsOnIssue({
               owner: repo.owner,
               repo: repo.repo,
               issue_number: pr.number
             });
-            const currentLabels = existingLabels.map(l => l.name);
+            const labels = currentLabels.map(l => l.name);
 
-            // Handle CHANGES_REQUESTED
-            if (context.eventName === 'pull_request_review' && context.payload.review.state === 'CHANGES_REQUESTED') {
-              if (!currentLabels.includes('needs-work')) {
-                await github.rest.issues.addLabels({
-                  owner: repo.owner,
-                  repo: repo.repo,
-                  issue_number: pr.number,
-                  labels: ['needs-work']
-                });
-              }
-              // Remove ready-to-run if present
-              if (currentLabels.includes('ready-to-run')) {
-                await github.rest.issues.removeLabel({
-                  owner: repo.owner,
-                  repo: repo.repo,
-                  issue_number: pr.number,
-                  name: 'ready-to-run'
-                }).catch(() => {});
-              }
+            // Do not apply 'needs-work' if PR has conflicts
+            if (labels.includes('has-conflicts')) {
+              console.log("Skipping 'needs-work' — PR has conflicts.");
               return;
             }
 
-            // Check if PR has conflicts
-            const { data: mergeablePR } = await github.rest.pulls.get({
-              owner: repo.owner,
-              repo: repo.repo,
-              pull_number: pr.number
-            });
-
-            if (mergeablePR.mergeable === false) {
-              if (!currentLabels.includes('has-conflicts')) {
-                await github.rest.issues.addLabels({
-                  owner: repo.owner,
-                  repo: repo.repo,
-                  issue_number: pr.number,
-                  labels: ['has-conflicts']
-                });
-              }
-              if (currentLabels.includes('ready-to-run')) {
-                await github.rest.issues.removeLabel({
-                  owner: repo.owner,
-                  repo: repo.repo,
-                  issue_number: pr.number,
-                  name: 'ready-to-run'
-                }).catch(() => {});
-              }
-              return;
+            // Add 'needs-work' if missing
+            if (!labels.includes('needs-work')) {
+              await github.rest.issues.addLabels({
+                owner: repo.owner,
+                repo: repo.repo,
+                issue_number: pr.number,
+                labels: ['needs-work']
+              });
             }
 
-            // If everything is clean and "needs-work"/"has-conflicts" exist, remove them
-            for (const label of ['needs-work', 'has-conflicts']) {
-              if (currentLabels.includes(label)) {
-                await github.rest.issues.removeLabel({
-                  owner: repo.owner,
-                  repo: repo.repo,
-                  issue_number: pr.number,
-                  name: label
-                }).catch(() => {});
-              }
+            // Remove 'ready-to-run' if present
+            if (labels.includes('ready-to-run')) {
+              await github.rest.issues.removeLabel({
+                owner: repo.owner,
+                repo: repo.repo,
+                issue_number: pr.number,
+                name: 'ready-to-run'
+              }).catch(() => {});
             }
