--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4"
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.2.4",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0"
   }
 }
