[DevOps-108][FIX] Added secrets and .env for frontend

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -25,7 +25,9 @@ jobs:
         run: npm run build
 
       - name: Build frontend Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest .
+        run: docker build \
+           --build-arg BACKEND_URI=${{ secrets.BACKEND_URI }} \
+           -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -42,5 +44,6 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ~/DevOps
+            export BACKEND_URI=${{ secrets.BACKEND_URI }}
             docker-compose pull frontend
             docker-compose up -d frontend
