--- a/.github/workflows/frontend-PR-deploy.yml
+++ b/.github/workflows/frontend-PR-deploy.yml
@@ -37,7 +37,10 @@ jobs:
         run: npm run build
 
       - name: Build frontend Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend-testing:latest .
+        run: | 
+          docker build \
+           --build-arg BACKEND_URI=${{ secrets.BACKEND_URI }} \
+           -t ${{ secrets.DOCKER_USERNAME }}/frontend-testing:latest .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -54,5 +57,6 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ~/DevOps
+            export BACKEND_URI=${{ secrets.BACKEND_URI }}
             docker-compose pull frontend-testing
             docker-compose up -d frontend-testing
