[DevOps-Request] Added new label + improve workflow

--- a/.github/workflows/pr-review-feedback.yml
+++ b/.github/workflows/pr-review-feedback.yml
@@ -1,4 +1,4 @@
-name: Label Needs Work
+name: PR Review Label Manager
 
 on:
   pull_request_review:
@@ -9,45 +9,62 @@ permissions:
   issues: write
 
 jobs:
-  label-review:
-    if: github.event.review.state == 'CHANGES_REQUESTED'
+  handle-review:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v7
+      - name: Get review state
+        id: review
+        uses: actions/github-script@v7
         with:
           script: |
             const pr = context.payload.pull_request;
-            const repo = context.repo;
+            const { owner, repo } = context.repo;
 
-            const { data: currentLabels } = await github.rest.issues.listLabelsOnIssue({
-              owner: repo.owner,
-              repo: repo.repo,
-              issue_number: pr.number
+            const { data: reviews } = await github.rest.pulls.listReviews({
+              owner,
+              repo,
+              pull_number: pr.number
             });
-            const labels = currentLabels.map(l => l.name);
 
-            // Do not apply 'needs-work' if PR has conflicts
-            if (labels.includes('has-conflicts')) {
-              console.log("Skipping 'needs-work' — PR has conflicts.");
-              return;
+            const latest = new Map();
+            for (const r of reviews.reverse()) {
+              if (!latest.has(r.user.login) && ['APPROVED', 'CHANGES_REQUESTED'].includes(r.state)) {
+                latest.set(r.user.login, r.state);
+              }
             }
 
-            // Add 'needs-work' if missing
-            if (!labels.includes('needs-work')) {
-              await github.rest.issues.addLabels({
-                owner: repo.owner,
-                repo: repo.repo,
-                issue_number: pr.number,
-                labels: ['needs-work']
-              });
-            }
+            const values = [...latest.values()];
+            const approvals = values.filter(v => v === 'APPROVED').length;
+            const changesRequested = values.includes('CHANGES_REQUESTED');
 
-            // Remove 'ready-to-run' if present
-            if (labels.includes('ready-to-run')) {
-              await github.rest.issues.removeLabel({
-                owner: repo.owner,
-                repo: repo.repo,
-                issue_number: pr.number,
-                name: 'ready-to-run'
-              }).catch(() => {});
-            }
+            core.setOutput("approvals", approvals);
+            core.setOutput("changesRequested", changesRequested);
+
+      - name: Remove 'to-review'
+        if: steps.review.outputs.approvals >= 1 || steps.review.outputs.changesRequested == 'true'
+        uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: to-review
+
+      - name: Add 'ready-to-run'
+        if: steps.review.outputs.approvals >= 1
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: ready-to-run
+
+      - name: Remove 'ready-to-run' (if changes requested)
+        if: steps.review.outputs.changesRequested == 'true'
+        uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: ready-to-run
+
+      - name: Add 'needs-work'
+        if: steps.review.outputs.changesRequested == 'true'
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: needs-work
+
