--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "next": "15.2.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
